# django-billing-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
billing/: admin.py  choices.py  models.py  serializer.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_invoice_invoicedetail.py  0003_invoice_amount_alter_invoice_invoice_number.py  0004_delete_invoicedetail.py
billing_api/: asgi.py  settings.py  urls.py  wsgi.py
config/: .env.template
config/deploy/ssl_certs/: jwt-key  jwt-key.pub
core/: api_codes.py  api_exceptions.py  file_paths.py  models.py  randomizer.py  serializer.py  utils.py
core/views/: __init__.py  mixins.py
docker/: docker-compose.prod.yml
docker/django/: Dockerfile
finance/: admin.py  choices.py  models.py  serializer.py  urls.py  views.py
finance/migrations/: 0001_initial.py
partners/: admin.py  apps.py  choices.py  models.py  partner_import.py  serializer.py  signals.py  urls.py  views.py
partners/migrations/: 0001_initial.py  0002_partner_title.py  0003_alter_partner_account_number_alter_partner_status_and_more.py  0004_alter_partner_account_number.py  0005_partnerupload.py  0006_partnerupload_file_name.py  0007_partnerupload_import_summary.py
requirements/: base.txt  local.txt  production.txt
server/: __init__.py  urls.py  wsgi.py
server/main_app/: urls.py  views.py
server/settings/: __init__.py
server/taskapp/: celery.py
tests/: conftest.py
tests/partners/: __init__.py  factories.py  test_views.py
(+18 files in other folders)
